# python_tools_pdf

./: .gitignore  README.md  SECURITY.md  add_toc_pdf.py  config.toml  merge_and_toc_pdf.py  noxfile.py  pyproject.toml  python-app.yml  requirements.txt  run_all.ps1
.github/: dependabot.yml
.github/workflows/: pylint.yml
scripts/: run_all.ps1  venv.ps1
test/: config.toml  config_test.toml  test_merge.py  test_merge.py .py
